# task-dispatcher

./: CMakeLists.txt  README.MD
benchmarks/: WorkerUnevenDistribution.cpp  WorkerUniformDistribution.cpp
src/: CircularArray.cpp  CircularArray.hpp  ITaskDispatcher.hpp  WSDeque.cpp  WSDeque.hpp  Worker.cpp  Worker.hpp  random_generator.cpp
tests/: WorkerExecutionCompleteness.cpp  WorkerFunctionCallAnalyze.cpp
workloads/: SyntheticTasks.hpp
